--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,7 +6,8 @@
   </head>
 
   <body>
-    <input type="button" class="btn" value="start"></input>
+    <input type="button" class="start" value="start"></input>
+    <input type="button" class="reset" value="reset"></input>
     <p>---------------------</p>
     <div>server pushed messages below</div>
     <p>---------------------</p>
